Fixed: Model z-index

--- a/src/components/DrawModel/ModelContent/style.module.scss
+++ b/src/components/DrawModel/ModelContent/style.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   position: absolute;
+  z-index: 99;
   top: 0;
   left: 0;
 
